--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,19 +6,13 @@
 
     <!-- CSS -->
     <!-- load bootstrap and our own personal stylesheet -->
-    <link href="//maxcdn.bootstrapcdn.com/bootswatch/3.2.0/superhero/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="public/css/style.css">
 
 </head>
 <body>
-
-<div class="container">
-    <div class="jumbotron">
-        <h1>This Is Heroku Awesome!</h1>
-        <p>This is the sample of a tutorial on <a href="http://scotch.io">scotch.io</a></p>
-        <a href="http://scotch.io/tutorials/" class="btn btn-primary btn-lg">View the Tutorial</a>
-    </div>
-</div>
+    <h1>
+        Hello
+    </h1>
 
 </body>
 </html>
