--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="{{ url_for('static',filename='images/icon.png') }}">
+    <link rel="icon" href="/images/icon.png">
     <meta charset="UTF-8">
-    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/signup.css') }}">
+    <link rel= "stylesheet" type= "text/css" href= "/styles/signup.css">
     <title>Server - Signup</title>
 </head>
     <body>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
         <!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="{{url_for('static', filename='scripts/signup.js')}}"></script>
+<script src="/scripts/signup.js"></script>
      <!--https://firebase.google.com/docs/web/setup#available-libraries -->
         <h1 class="Headline">Signup</h1>
         <form action="" method="POST">
