--- a/views/404.ejs
+++ b/views/404.ejs
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="{{ url_for('static',filename='images/icon.png') }}">
+    <link rel="icon" href="/images/icon.png">
     <meta charset="UTF-8">
-    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/404.css') }}">
+    <link rel= "stylesheet" type= "text/css" href= "/styles/404.css">
     <title>Server - Page Not Found</title>
 </head>
     <body>
