--- a/views/dev.ejs
+++ b/views/dev.ejs
@@ -3,10 +3,10 @@
 <head>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="{{ url_for('static',filename='images/icon.png') }}">
+    <link rel="icon" href="/images/icon.png">
     <meta charset="UTF-8">
-    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/dev.css') }}">
-    <script src="{{url_for('static', filename='scripts/dev.js')}}"></script>
+    <link rel= "stylesheet" type= "text/css" href= "/style/dev.css">
+    <script src="/scripts/dev.js"></script>
     <title>Server - Dev</title>
 </head>
     <body>
