--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="{{ url_for('static',filename='images/icon.png') }}">
+    <link rel="icon" href="/images/icon.png">
     <meta charset="UTF-8">
-    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/login.css') }}">
-    <script src="{{url_for('static', filename='scripts/login.js')}}"></script>
+    <link rel= "stylesheet" type= "text/css" href= "/styles/login.css">
+    <script src="/scripts/login.js"></script>
     <title>Server - Login</title>
 </head>
     <body>
