--- a/views/testblackjack.ejs
+++ b/views/testblackjack.ejs
@@ -3,15 +3,14 @@
 <html>
 <head>
 	<title>Server - Blackjack</title>
-    <link rel="icon" href="{{ url_for('static',filename='images/icon.png') }}">
+    <link rel="icon" href="/images/icon.png">
     <!--<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Yanone+Kaffeesatx:700">-->
     <link href="https://fonts.googleapis.com/css?family=Merriweather:700" rel="stylesheet">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" defer></script>
     <!--<link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/reset.css') }}">
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/style.css') }}">-->
-    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/testblackjack.css') }}">
-    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/testblackjack.css') }}">
+    <link rel= "stylesheet" type= "text/css" href= "/styles/testblackjack.css">
     <!--<script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase.js"></script>
