--- a/views/boiler.ejs
+++ b/views/boiler.ejs
@@ -5,7 +5,7 @@
     <link rel="icon" href="/images/icon.png">
     <meta charset="UTF-8">
     <link rel= "stylesheet" type= "text/css" href= "/styles/home.css">
-    <title>Server - {{ Title }}</title>
+    <title>Server - %title</title>
 </head>
     <body>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
@@ -13,8 +13,8 @@
         <!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="/styles/home.js"></script>
      <!--https://firebase.google.com/docs/web/setup#available-libraries -->
-        <h1 class="Headline">{{ Headline }}</h1>
-        <p>{{ Subheader }}
+        <h1 class="Headline">%= header %</h1>
+        <p>%= subhead %</p>
         <button onClick="history.back()">Back</button>
         <br>
         <br>
