--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,8 +16,8 @@
         <h1 class="Headline">Welcome</h1>
         
         <p>Welcome to Benji's Web Server</p>
-        <p>Annoucement: % announcement %</p>
-        <p>Progress Message: {{ Message }}</p>
+        <p>Annoucement: <%= announcement %></p>
+        <p>Progress Message: <%= Message %></p>
         <button onClick="window.location.href = '/login'">Login</button>
         <br>
         <br>
