--- a/views/dev.ejs
+++ b/views/dev.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/images/icon.png">
     <meta charset="UTF-8">
-    <link rel= "stylesheet" type= "text/css" href= "/style/dev.css">
+    <link rel= "stylesheet" type= "text/css" href= "/styles/dev.css">
     <script src="/scripts/dev.js"></script>
     <title>Server - Dev</title>
 </head>
