--- a/views/games.ejs
+++ b/views/games.ejs
@@ -10,13 +10,14 @@
     <body>
         <h1 class="Headline">Game Sites</h1>
         
-        <p>Game Sites</p>
-        <ul>
-           <li><a target="_blank" href="https://sites.google.com/site/tyronesgameshack/">Tyrones Game Shack</a></li>
-           <li><a target="_blank" href="https://sites.google.com/site/xenogame224/">Xenogames224</a></li>
-           <li><a target="_blank" href="https://unblockedgames66.sites.google.com/site/playunblocked66/">Unblocked Game 66</a></li>
-        </ul>
+        <p>Games</p>
         <button onClick="window.location.href = '/'">Home</button>
+        <br>
+        <br>
+        <button onClick="window.location.href='/games/swingtriangle'">Swing Triangle</button>
+        <br>
+        <br>
+        <button onClick="window.location.href='/games/chess'">Chess</button>
         
         
     </body>
