--- a/views/swingtriangle.ejs
+++ b/views/swingtriangle.ejs
@@ -1,3 +1,4 @@
+<link rel="icon" href="/images/icon.png">
 <iframe width="100%" height="100%" src="https://www.addictinggames.com/embed/html5-games/22913" scrolling="no"></iframe>
 <title>Games - Swing Triangle</title>
 <link rel="icon" href="/images/icon.png">
