--- a/views/chess.ejs
+++ b/views/chess.ejs
@@ -1,8 +1,28 @@
 
 <link rel="icon" href="/images/icon.png">
-<iframe
- style="width: 100%; height: 550px; overflow: hidden;"
- src="https://playpager.com/embed/chess/index.html"
- scrolling="no">
-</iframe>
+<iframe id="html5game" src="https://chess.coolmathgames.com/" class="no-select" width="800px" height="620px" scrolling="no" marginwidth="0" vspace="0" frameborder="0" hspace="0" marginheight="0" data-ruffle-polyfilled=""></iframe>
 <title>Games - Chess</title>
+<style>
+  
+  .html5game
+  {
+      display: auto;
+  }
+  body {
+      background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+      background-size: 400% 400%;
+      animation: gradient 15s ease infinite;
+  }
+  
+  @keyframes gradient {
+      0% {
+          background-position: 0% 50%;
+      }
+      50% {
+          background-position: 100% 50%;
+      }
+      100% {
+          background-position: 0% 50%;
+      }
+  }
+</style>
