--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -1,28 +1,25 @@
-
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
- <! — include bootstap and jquery cdn →
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/images/icon.png">
+    <meta charset="UTF-8">
+    <link rel= "stylesheet" type= "text/css" href= "/styles/home.css">
+    <title>Server - Chat</title>
 </head>
-<body>
-<div class=”container”>
- <br>
- <div class=”jumbotron”>
- <h1 class=”display-4">Send Message</h1>
- <br>
- <input id = “name” class=”form-control” placeholder=”Name”>
- <br>
- <textarea id = “message” class=”form-control” placeholder=”Your Message Here”>
-</textarea>
- <br>
- <button id=”send” class=”btn btn-success”>Send</button>
- </div>
- <div id=”messages”>
- 
-</div>
-</div>
-<script>
+    <body>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
-</script>
-</body>
+        <!-- The core Firebase JS SDK is always required and must be listed first -->
+        <script src="/styles/home.js"></script>
+     <!--https://firebase.google.com/docs/web/setup#available-libraries -->
+        <h1 class="Headline">Chat</h1>
+        <p>Temporary Solution, I Will Make A Real One Soon</p>
+        <script id="cid0020000282986217531" data-cfasync="false" async src="//st.chatango.com/js/gz/emb.js" style="width: 777px;height: 551px;">{"handle":"benjisdemochat","arch":"js","styles":{"a":"0084ef","b":100,"c":"FFFFFF","d":"FFFFFF","k":"0084ef","l":"0084ef","m":"0084ef","n":"FFFFFF","p":"10","q":"0084ef","r":100,"cnrs":"0.35","fwtickm":1}}</script>
+        <br>
+        <button onClick="history.back()">Back</button>
+        <br>
+        <br>
+        <button onClick="window.location.href = '/'">Home</button>
+    </body>
 </html>
