--- a/views/home.ejs
+++ b/views/home.ejs
@@ -33,6 +33,9 @@
         <button onClick="window.location.href = '/dev'">For Developers</button>
         <br>
         <br>
+        <button onClick="window.location.href = '/chat'">Chat (Temporary Will Be Upgraded Soon)</button>
+        <br>
+        <br>
         <button onClick="window.location.href = '/blackjack'">Blackjack(In Work)</button>
         <br>
         <br>
