Worked on developer access checking and got start for dev page

--- a/views/dev.ejs
+++ b/views/dev.ejs
@@ -10,21 +10,6 @@
     <title>Server - Dev</title>
 </head>
     <body>
-        <h1 class="Headline">Developers</h1>
-        
-        <p>Welcome to the developers page!
-            If you are a developer please log in below!
-            If you would like to become a dev please contact Benji.
-        </p>
-        <P>Username</P>
-        <input id="user">
-        <p>Password</p>
-        <input id="pass" type="password">
-        <br>
-        <p>
-        <button onClick="login()">Login</button>
-        <br>
-        <br>
-        <button onClick="window.location.href = '/'">Home</button>
+        <h1 class="Headline">Working On This Page</h1>
     </body>
 </html>
