Added learn to code

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -39,6 +39,9 @@
         <button onClick="window.location.href = '/blackjack'">Blackjack(In Work)</button>
         <br>
         <br>
+        <button onClick="window.location.href = '/howtocode'">Learn To Code By Me!</button>
+        <br>
+        <br>
         <button onClick="window.location.href = '/reporterror'">Report An Error</button>
         <br>
         <br>
