--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -1,25 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/images/icon.png">
-    <meta charset="UTF-8">
-    <link rel= "stylesheet" type= "text/css" href= "/styles/home.css">
-    <title>Server - Chat</title>
-</head>
-    <body>
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Server - Chat</title>
+  <link rel="icon" href="/images/icon.png">
+  <script defer src="http://localhost:3000/socket.io/socket.io.js"></script>
+  <script defer src="/scripts/script.js"></script>
+  <style>
+    body {
+      padding: 0;
+      margin: 0;
+      display: flex;
+      justify-content: center;
+    }
 
-        <!-- The core Firebase JS SDK is always required and must be listed first -->
-        <script src="/styles/home.js"></script>
-     <!--https://firebase.google.com/docs/web/setup#available-libraries -->
-        <h1 class="Headline">Chat</h1>
-        <p>Temporary Solution, I Will Make A Real One Soon</p>
-        <script id="cid0020000282986217531" data-cfasync="false" async src="//st.chatango.com/js/gz/emb.js" style="width: 777px;height: 551px;">{"handle":"benjisdemochat","arch":"js","styles":{"a":"0084ef","b":100,"c":"FFFFFF","d":"FFFFFF","k":"0084ef","l":"0084ef","m":"0084ef","n":"FFFFFF","p":"10","q":"0084ef","r":100,"cnrs":"0.35","fwtickm":1}}</script>
-        <br>
-        <button onClick="history.back()">Back</button>
-        <br>
-        <br>
-        <button onClick="window.location.href = '/'">Home</button>
-    </body>
+    #message-container {
+      width: 80%;
+      max-width: 1200px;
+    }
+
+    #message-container div {
+      background-color: #CCC;
+      padding: 5px;
+    }
+
+    #message-container div:nth-child(2n) {
+      background-color: #FFF;
+    }
+
+    #send-container {
+      position: fixed;
+      padding-bottom: 30px;
+      bottom: 0;
+      background-color: white;
+      max-width: 1200px;
+      width: 80%;
+      display: flex;
+    }
+
+    #message-input {
+      flex-grow: 1;
+    }
+  </style>
+</head>
+<body>
+  <div id="message-container"></div>
+  <form id="send-container">
+    <input type="text" id="message-input">
+    <button type="submit" id="send-button">Send</button>
+  </form>
+</body>
 </html>
