--- a/views/home.ejs
+++ b/views/home.ejs
@@ -33,7 +33,7 @@
         <button onClick="window.location.href = '/dev'">For Developers</button>
         <br>
         <br>
-        <button onClick="window.location.href = '/chat'">Chat (Temporary Will Be Upgraded Soon)</button>
+        <button onClick="window.location.href = '/chat'">Chat (In early stages bugs may occur)</button>
         <br>
         <br>
         <button onClick="window.location.href = '/blackjack'">Blackjack(In Work)</button>
