--- a/views/howtocode.ejs
+++ b/views/howtocode.ejs
@@ -45,5 +45,6 @@
         <p>You should get the output Hello. Now try changing the word in the quotes to something else but don't delete the quotes. Now run it again</p>
         <p>You should get the output of whatever you put in those quotes</p>
         <p>Thats all about programming for now, I will add more</p>
+        <p>I did not get to add more over the weekend but I will add more soon</p>
     </body>
 </html>
