--- a/views/howtocode.ejs
+++ b/views/howtocode.ejs
@@ -44,7 +44,22 @@
         </code>
         <p>You should get the output Hello. Now try changing the word in the quotes to something else but don't delete the quotes. Now run it again</p>
         <p>You should get the output of whatever you put in those quotes</p>
+        <h2>3. Getting User Input And Managing Variables</h2>
+        <p>In python there is a special function to get user input</p>
+        <code class="langauge-python">
+            <pre>print("What is your name?")</pre>
+            <pre>name = input()</pre>
+            <pre>print("Hello " + name)</pre>
+        </code>
+        <p>You will get a line printed to the screen asking your name, then you can type your name and hit enter</p>
+        <p>After you hit enter it will say your Hello and your name</p>
+        <p>In code you can combine strings using the +</p>
+        <p>For Example:</p>
+        <code class="langauge-python">
+            <pre>string1 = "Hello "</pre>
+            <pre>string2 = "John"</pre>
+            <pre>print(string1 + string2)</pre>
+        </code>
         <p>Thats all about programming for now, I will add more</p>
-        <p>I did not get to add more over the weekend but I will add more soon</p>
     </body>
 </html>
