--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Server - Chat</title>
   <link rel="icon" href="/images/icon.png">
-  <script defer src="http://localhost:3000/socket.io/socket.io.js"></script>
+  <script defer src="/socket.io/socket.io.js"></script>
   <script defer src="/scripts/script.js"></script>
   <style>
     body {
