--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -7,6 +7,10 @@
   <title>Server - Chat</title>
   <link rel="icon" href="/images/icon.png">
   <script defer src="/socket.io/socket.io.js"></script>
+  <script>
+    username = "<%= username %>";
+    nickname = "<%= nickname %>"
+  </script>
   <script defer src="/scripts/script.js"></script>
   <style>
     body {
@@ -47,7 +51,7 @@
 </head>
 <body>
   <div id="message-container"></div>
-  <form id="send-container">
+  <form id="send-container" autocomplete="off">
     <input type="text" id="message-input">
     <button type="submit" id="send-button">Send</button>
   </form>
