Added ban system

--- a/views/howtocode.ejs
+++ b/views/howtocode.ejs
@@ -60,6 +60,11 @@
             <pre>string2 = "John"</pre>
             <pre>print(string1 + string2)</pre>
         </code>
+        <h2>4. Learning Errors</h2>
+        <p>There are 3 types of errors in programming. Syntax errors, logic errors and exceptions</p>
+        <p>A syntax error is where the code you wrote does not follow the rules of the langague you are writing</p>
+        <p>A logic error is an error where the code works but does not do what you want it to do</p>
+        <p>The last type of error is an exception error. This is where the code knows what to do but can not do that action</p>
         <p>Thats all about programming for now, I will add more</p>
     </body>
 </html>
