Home page update:

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,35 +16,43 @@
         <h1 class="Headline">Welcome</h1>
         
         <p>Welcome to Benji's Web Server</p>
-        <p>Annoucement: <%= announcement %></p>
-        <p>Progress Message: <%= Message %></p>
-        <button onClick="window.location.href = '/login'">Login</button>
+        <div id="infoBox">
+            <br>
+            <p>Annoucement: <%= announcement %></p>
+            <p>Progress Message: <%= Message %></p>
+        </div>
         <br>
-        <br>
-        <button onClick="window.location.href = '/user/home'">Account</button>
-        <br>
-        <br>
-        <button onClick="window.location.href = '/music'">Music</button>
-        <br>
-        <br>
-        <button onClick="window.location.href = '/games'">Game Section</button>
-        <br>
-        <br>
-        <button onClick="window.location.href = '/dev'">For Developers</button>
-        <br>
-        <br>
-        <button onClick="window.location.href = '/chat'">Chat (In beta testing)</button>
-        <br>
-        <br>
-        <button onClick="window.location.href = '/blackjack'">Blackjack(In Work)</button>
-        <br>
-        <br>
-        <button onClick="window.location.href = '/howtocode'">Learn To Code By Me!</button>
-        <br>
-        <br>
-        <button onClick="window.location.href = '/reporterror'">Report An Error</button>
-        <br>
-        <br>
-        <button onClick="window.location.href = '/about'">About</button>
+        <div id="menuBox">
+            <br>
+            <br>
+            <button onClick="window.location.href = '/login'">Login</button>
+            <br>
+            <br>
+            <button onClick="window.location.href = '/user/home'">Account</button>
+            <br>
+            <br>
+            <button onClick="window.location.href = '/music'">Music</button>
+            <br>
+            <br>
+            <button onClick="window.location.href = '/games'">Game Section</button>
+            <br>
+            <br>
+            <button onClick="window.location.href = '/dev'">For Developers</button>
+            <br>
+            <br>
+            <button onClick="window.location.href = '/chat'">Chat (In beta testing)</button>
+            <br>
+            <br>
+            <button onClick="window.location.href = '/blackjack'">Blackjack(In Work)</button>
+            <br>
+            <br>
+            <button onClick="window.location.href = '/howtocode'">Learn To Code By Me!</button>
+            <br>
+            <br>
+            <button onClick="window.location.href = '/reporterror'">Report An Error</button>
+            <br>
+            <br>
+            <button onClick="window.location.href = '/about'">About</button>
+        </div>
     </body>
 </html>
