--- a/static/styles/home.css
+++ b/static/styles/home.css
@@ -38,6 +38,21 @@ button:hover
     color: blue;
     border-width: 3px;
 }
+#infoBox
+{
+    border: solid 2px black;
+    width: 600px;
+    height: 150px;
+    border-radius: 15px;
+}
+#menuBox
+{
+    backdrop-filter: blur(5px);
+    border: solid 2px black;
+    height: 500px;
+    width: 300px;
+    border-radius: 15px;
+}
 html, body {
     width: 100%;
     height:100%;
