--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/images/icon.png">
     <meta charset="UTF-8">
-    <link rel= "stylesheet" type= "text/css" href= "/styles/signup.css">
+    <link rel= "stylesheet" type= "text/css" href= "/styles/home.css">
     <title>Server - Signup</title>
 </head>
     <body>
