--- a/views/userHome.ejs
+++ b/views/userHome.ejs
@@ -58,7 +58,10 @@
         <p>Account Balance -> <%= balance %> Benjcoins</p>
         <p>Access -> <%= access %> </p>
         <form action="" method="POST">
-            <input class="logout" type="submit" value="Logout">
+            <input class="submit" type="submit" value="Logout">
         </form>
     </body>
+    <footer id="footer">
+        &copy; 2021 Benji Corporation
+    </footer>
 </html>
