--- a/static/styles/home.css
+++ b/static/styles/home.css
@@ -1,57 +1,108 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap');
-
-p
+*
+{
+    font-family: "Nunito", sans-serif;
+}
+#welcome
 {
     font-family: 'Nunito', sans-serif;
-    
+    text-align: center;
+}
+input[type="submit"]
+{
+    opacity: 0.7;
+    font-family: 'Nunito', sans-serif;
+    font-size: 15px;
+    color: white;
+    background-color: rgb(0, 105, 211);
+    border-color:rgb(0, 105, 211);
+    border-radius: 5px;
+}
+input[type="submit"]:hover
+{
+    opacity: 1.0;
+    font-family: 'Nunito', sans-serif;
+    font-size: 15px;
+    border-color:rgb(0, 105, 211);
+    color: white;
+    background-color: rgb(0, 105, 211);
+    border-radius: 5px;
 }
 .Headline, h2
 {
     font-family: 'Nunito', sans-serif;
     border-bottom: solid 2px;
+    text-align: center;
 }
 button
 {
+    opacity: 0.7;
     font-family: 'Nunito', sans-serif;
     font-size: 15px;
-    color: black;
-    border-width: 3px;
+    color: white;
+    background-color: rgb(0, 105, 211);
+    border-color:rgb(0, 105, 211);
+    border-radius: 5px;
 }
 button:hover
 {
+    opacity: 1.0;
     font-family: 'Nunito', sans-serif;
     font-size: 15px;
-    color: blue;
-    border-width: 3px;
+    border-color:rgb(0, 105, 211);
+    color: white;
+    background-color: rgb(0, 105, 211);
+    border-radius: 5px;
 }
 .submit
 {
+    opacity: 0.7;
     font-family: 'Nunito', sans-serif;
     font-size: 15px;
-    color: black;
-    border-width: 3px;
+    color: white;
+    background-color: rgb(0, 105, 211);
+    border-color:rgb(0, 105, 211);
+    border-radius: 5px;
 }
 .submit:hover
 {
+    opacity: 1.0;
     font-family: 'Nunito', sans-serif;
     font-size: 15px;
-    color: blue;
-    border-width: 3px;
+    border-color:rgb(0, 105, 211);
+    color: white;
+    background-color: rgb(0, 105, 211);
+    border-radius: 5px;
 }
 #infoBox
 {
+    font-family: "Nunito", sans-serif;
     border: solid 2px black;
-    width: 600px;
-    height: 150px;
+    width: 35%;
+    height: 15%;
     border-radius: 15px;
+    text-align: center;
+    margin: auto;
 }
 #menuBox
 {
     backdrop-filter: blur(5px);
     border: solid 2px black;
-    height: 500px;
-    width: 300px;
+    height: 55%;
+    width: 17%;
     border-radius: 15px;
+    margin: auto;
+    text-align: center;
+}
+#footer
+{
+    font-size: 20px;
+    font-family: 'Nunito',sans-serif;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
 }
 html, body {
     width: 100%;
