--- a/views/home.ejs
+++ b/views/home.ejs
@@ -39,7 +39,7 @@
             <button onClick="window.location.href = '/dev'">For Developers</button>
             <br>
             <br>
-            <button onClick="window.location.href = '/chat'">Chat (In beta testing)</button>
+            <button onClick="window.location.href = '/chat'">Chat</button>
             <br>
             <br>
             <button onClick="window.location.href = '/blackjack'">Blackjack(In Work)</button>
