--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -12,6 +12,7 @@
     nickname = "<%= nickname %>"
   </script>
   <script defer src="/scripts/script.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <style>
     body {
       padding: 0;
