Added home button for dev page

--- a/views/dev.ejs
+++ b/views/dev.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/images/icon.png">
     <meta charset="UTF-8">
-    <link rel= "stylesheet" type= "text/css" href= "/styles/dev.css">
+    <link rel= "stylesheet" type= "text/css" href= "/styles/home.css">
     <script src="/scripts/dev.js"></script>
     <title>Server - Dev</title>
 </head>
@@ -23,6 +23,11 @@
             <br>
             <br>
             <input class="a" type="submit" value="Change">
+            <br>
+            <br>
+           
+            </script>
         </form>
+        <button class="a" onClick="window.location.href = '/'">Home</button>
     </body>
 </html>
